--- a/package.json
+++ b/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "collabapp",
-  "version": "1.0.0",
-  "description": "collaboration app",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/amitavamitra/collabapp.git"
-  },
-  "author": "Amitava Mitra",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/amitavamitra/collabapp/issues"
-  },
-  "homepage": "https://github.com/amitavamitra/collabapp#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "dotenv": "^9.0.0",
-    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "node-rfc": "^2.4.2",
-    "request": "^2.88.2"
+    "moment": "^2.29.1",
+    "socket.io": "^4.0.1"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "realtimechat",
+  "version": "1.0.0",
+  "description": "RealTime Chat Application",
+  "main": "server.js",
+  "devDependencies": {},
+  "author": "Amitava Mitra",
+  "license": "MIT",
+  "engines": {
+    "node": "12.19.0"
   }
 }
