--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "moment": "^2.29.1",
+    "node-rfc": "^2.4.2",
     "socket.io": "^4.0.1"
   },
   "scripts": {
@@ -11,7 +12,6 @@
   "version": "1.0.0",
   "description": "RealTime Chat Application",
   "main": "server.js",
-  "devDependencies": {},
   "author": "Amitava Mitra",
   "license": "MIT",
   "engines": {
