--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "node-rfc": "^2.4.2",
+    "request": "^2.88.2",
     "socket.io": "^4.0.1"
   },
   "scripts": {
