--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "dotenv": "^9.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "node-rfc": "^2.4.2",
